--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,6 +34,10 @@
                                 <li>
                                     {{this.id}}
                                     {{this.burger_name}}
+                                    <form class="delete" data-id = {{this.id}}>
+			                        <input type="hidden" name="delete" value="true">
+			                        <button class="btn-primary delete-button" type="submit">Delete!</button>
+			                        </form>
                                 </li>
                             {{/if}}
                         {{/each}}    
@@ -43,6 +47,7 @@
         
 
             <div class="row">
+                <div class="col-md-4"></div>
                 <div class="col-md-4" id="addBurger">
     
                     <h2>Add A Burger!</h2>
